<resources>
    <string name="app_name">Traveller Guide</string>
    <string name="currentLocation">Your Current Location</string>
    <string name="location_information">Location Information</string>
    <string name="temperature">Temperature</string>
    <string name="find_nearby_places">Find Nearby Places</string>
    <string name="travel_guide">Travel Guide</string>
    <string name="looking_for">What are you looking for?</string>
    <string name="pnr_status">PNR Status</string>
    <string name="enter_pnr">Enter PNR</string>
    <string name="find_pnr_status">Find PNR Status</string>
    <string name="train_between_station">Train Between Station</string>
    <string name="find_trains">Find Trains</string>
    <string name="january_1_2016">January 1, 2016</string>
    <string name="_10_10_am">10:10 AM</string>
    <string name="result_goes_here">Result goes here...</string>
    <string name="station_1">Station 1</string>
    <string name="station_2">Station 2</string>
    <string name="dot">...</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="last_updated">Last Updated: NA</string>
    <string name="thermometer">thermometer</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="enterpnr_here">EnterPNR here</string>
    <string name="icon">icon</string>
    <string name="_10_11_am">10:11 AM</string>
    <string name="title_activity_maps">Map</string>
    <string name="get_station_code">Get Station Code</string>
    <string name="enter_station_name">Enter Station Name</string>
    <string name="find_code">Find Code</string>
    <string name="get_train_no">Get Train No</string>
    <string name="enter_train_name">Enter Train Name</string>
    <string name="restaurant">Restaurant</string>
    <string name="railway_station">Railway Station</string>
    <string name="hospital">Hospital</string>
    <string name="airport">Airport</string>
    <string name="police_station">Police Station</string>
    <string name="movie_theater">Movie Theater</string>
    <string name="hotel">Hotel</string>
    <string name="park">Park</string>
    <string name="atm">ATM</string>
    <string name="action_setting">Settings</string>
    <string name="action_refresh">Refresh</string>
</resources>
